# corgi_detector

./: car_detector.svm  createsamples.pl  cropped.xml  google_urls.txt  negatives.txt  positives.txt  positives.xml  samples.vec  scrape_flickr.py  scrape_google.py  subsample.xml  subsample_resized.xml  training_set.xml
circle_square_maker/: example_maker.rb
data/: remove_small_images.sh
samples/: flickr_003.jpg_0000_0235_0029_0167_0187.png.vec  flickr_005.jpg_0000_0106_0001_0248_0313.png.vec  flickr_007.jpg_0000_0142_0038_0179_0236.png.vec  flickr_008.jpg_0000_0089_0071_0168_0203.png.vec  flickr_009.jpg_0000_0030_0034_0274_0400.png.vec  flickr_013.jpg_0000_0119_0176_0103_0097.png.vec  flickr_013.jpg_0000_0125_0177_0095_0090.png.vec  flickr_013.jpg_0000_0145_0089_0064_0080.png.vec  flickr_013.jpg_0000_0208_0087_0068_0086.png.vec  flickr_013.jpg_0000_0238_0168_0091_0100.png.vec  flickr_013.jpg_0000_0288_0091_0087_0087.png.vec  flickr_014.jpg_0000_0333_0036_0143_0153.png.vec  flickr_015.jpg_0000_0079_0087_0330_0298.png.vec  flickr_016.jpg_0000_0028_0032_0245_0234.png.vec  flickr_018.jpg_0000_0107_0001_0333_0286.png.vec  flickr_019.jpg_0000_0194_0112_0092_0056.png.vec  flickr_020.jpg_0000_0217_0094_0070_0110.png.vec  flickr_021.jpg_0000_0011_0048_0276_0260.png.vec  flickr_022.jpg_0000_0027_0032_0310_0294.png.vec  flickr_023.jpg_0000_0133_0041_0274_0319.png.vec  flickr_024.jpg_0000_0229_0028_0143_0218.png.vec  flickr_025.jpg_0000_0009_0000_0318_0294.png.vec  flickr_026.jpg_0000_0048_0194_0074_0072.png.vec  (+132 more)
src/: CMakeLists.txt  train_object_detector.cpp
